abstract_introduction_conclusion

--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@
 %Befehle für Symbole
 \newglossaryentry{symb:C_param}{
 name=$C^{X}$,
-description={Circumference of the extraction/injection orbit of a specific synchrotron},
+description={Circumference of the extraction/injection orbit of the ring accelerator X},
 sort=symbolpi, type=symbolslist
 }
 
@@ -110,34 +110,34 @@ sort=symbolphi, type=symbolslist
 }
 \newglossaryentry{symb:rev_freq}{
 name=$f_{\mathit{rev}}^{X} $,
-description={or $f_{h=1}^{X}$. Revolution frequency of a specific synchrotron}, 
+description={or $f_{h=1}^{X}$. Revolution frequency of the ring accelerator X}, 
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:cavity_freq}{
 name=$f_{\mathit{rf}}^{X}$,
-description={or $f_{h=cavity\_harmonic}^{X}$. Cavity rf frequency of a specific synchrotron},
+description={or $f_{h=cavity\_harmonic}^{X}$. Cavity rf frequency of the ring accelerator X},
 sort=symbolpi, type=symbolslist
 }
 
 \newglossaryentry{symb:harmonic_param}{
 name=$h^X_\mathit{rf}$,
-description={Cavity harmonic number of a specified synchrotron}, %$X=l$, harmonic number of large synchrotron; $X=s$, harmonic number of small synchrotron; $X=src$, harmonic number of source synchrotron; $X=trg$, harmonic number of target synchrotron },
+description={Cavity harmonic number of the ring accelerator X}, 
 sort=symbollambda, type=symbolslist
 } 
 \newglossaryentry{symb:syn_harmonic_param}{
 name=$h_\mathit{syn}^\mathit{X}$,
-description={Harmonic number of the synchronization frequency of a specific synchrotron}, %$X=l$, harmonic number of large synchrotron; $X=s$, harmonic number of small synchrotron; $X=src$, harmonic number of source synchrotron; $X=trg$, harmonic number of target synchrotron },
+description={Harmonic number of the synchronization frequency of the ring accelerator X}, 
 sort=symbollambda, type=symbolslist
 } 
 \newglossaryentry{symb:rev_harmonic_param}{
 name=$h_\mathit{rev}^\mathit{X}$,
-description={Harmonic number of the revolution frequency of a specific synchrotron, which is defined as the first harmonic}, %$X=l$, harmonic number of large synchrotron; $X=s$, harmonic number of small synchrotron; $X=src$, harmonic number of source synchrotron; $X=trg$, harmonic number of target synchrotron },
+description={Harmonic number of the revolution frequency of the ring accelerator X, which is defined as the first harmonic}, 
 sort=symbollambda, type=symbolslist
 } 
 
 \newglossaryentry{symb:harmonic_param_inj}{
 name=$h^\mathit{trg}_\mathit{inj}$,
-description={Number of buckets needed to be injected of the target synchrotron}, %$X=l$, harmonic number of large synchrotron; $X=s$, harmonic number of small synchrotron; $X=src$, harmonic number of source synchrotron; $X=trg$, harmonic number of target synchrotron },
+description={Number of buckets needed to be injected of the target ring}, 
 sort=symbollambda, type=symbolslist
 }
 
@@ -477,7 +477,7 @@ sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:init_pse}{
 name=$\phi^X_0$,
-description={Initial phase deviation between the synchronization frequency and synchronization reference signal of the synchrotron X},
+description={Initial phase deviation between the synchronization frequency and synchronization reference signal of the ring accelerator X},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:pha_step}{
@@ -512,7 +512,7 @@ sort=symbollambda, type=symbolslist
 } 
 \newglossaryentry{symb:best_align}{
 name=$t_{align}$,
-description={Best estimate of alignment of zero crossing points of phase measurement signals of source and target synchrotrons},
+description={Best estimate of alignment of zero crossing points of phase measurement signals of source and target rings},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:delay_com}{
@@ -522,12 +522,12 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:probable_aligh}{
 name=$\delta t_{align}$,
-description={Uncertainty of the best estimate of alignment of zero crossing points of phase measurement signals of source and target synchrotrons},
+description={Uncertainty of the best estimate of alignment of zero crossing points of phase measurement signals of source and target rings},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:slope}{
 name=$k^X$,
-description={Slope of the phase deviation between the synchronization reference signal and a dedicated phase measurement signal of the synchrotron X},
+description={Slope of the phase deviation between the synchronization reference signal and a dedicated phase measurement signal of the ring accelerator X},
 sort=symbolpi, type=symbolslist
 }
 
@@ -543,7 +543,7 @@ sort=symbolpi, type=symbolslist
 %}
 \newglossaryentry{symb:un_h1phase100}{
 name=$\delta \psi^{X}_0$,
-description={Uncertainty of the extrapolated phase of the synchrotron X in the phase domain},
+description={Uncertainty of the extrapolated phase of the ring accelerator X in the phase domain},
 sort=symbollambda, type=symbolslist
 }
 
@@ -714,12 +714,12 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:tsrc}{
 name=$t_{v\_ext}$,
-description={Time corresponding to the distance between the virtual rf cavity and the extraction position of the source synchrotron},
+description={Time corresponding to the distance between the virtual rf cavity and the extraction position of the source ring},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:ttrg}{
 name=$t_{v\_inj}$,
-description={Time corresponding to the distance between the virtual rf cavity and the injection position of the target synchrotron},
+description={Time corresponding to the distance between the virtual rf cavity and the injection position of the target ring},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:temg}{
@@ -744,23 +744,29 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:phase_diff1}{
 name=$\phi^X$,
-description={Measured phase deviation between the synchronization frequency and the synchronization reference signal of the synchrotron X},
+description={Measured phase deviation between the synchronization frequency and the synchronization reference signal of the ring accelerator X},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:phase_diff}{
 name=$\varphi^X$,
-description={Measured phase deviation between the phase measurement signal and the synchronization reference signal of the synchrotron X},
+description={Measured phase deviation between the phase measurement signal and the synchronization reference signal of the ring accelerator X},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:phase_diff_0}{
 name=$\varphi^X_0$,
-description={Initial value of the phase deviation between the phase measurement signal and the synchronization reference signal of the synchrotron X},
+description={Initial value of the phase deviation between the phase measurement signal and the synchronization reference signal of the ring accelerator X},
+sort=symbollambda, type=symbolslist
+}
+
+\newglossaryentry{symb:initial_syn_phase}{
+name=$\phi^X_\mathit{syn}$,
+description={Initial phase of the synchronization frequency of the ring accelerator X},
 sort=symbollambda, type=symbolslist
 }
 
 \newglossaryentry{symb:phase_diff_T0}{
 name=$\psi^X$,
-description={Extrapolated phase advance between the phase measurement signal and the synchronization reference signal of the synchrotron X},
+description={Extrapolated phase advance between the phase measurement signal and the synchronization reference signal of the ring accelerator X},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:kicker_rise}{
@@ -770,7 +776,7 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:phase_diff_time0}{
 name=$\psi^X_0$,
-description={Phase advance extrapolated by the PAP module at $t_\mathit{\psi}^\mathit{X}$ of the X synchrotron.},
+description={Phase advance extrapolated by the PAP module at $t_\mathit{\psi}^\mathit{X}$ of the ring accelerator X.},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:synchronization_freq}{
@@ -786,7 +792,7 @@ sort=symbollambda, type=symbolslist
 
 \newglossaryentry{symb:phase_diff_t_T0}{
 name=$\psi2$,
-description={Extrapolated phase advance between the phase measurement signal and the synchronization reference signal of the target synchrotron by PAP module},
+description={Extrapolated phase advance between the phase measurement signal and the synchronization reference signal of the target ring by PAP module},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:time_phase_diff_T0}{
@@ -796,7 +802,7 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:initial_phase advance}{
 name=$\psi_0$,
-description={Initial phase advance in a linear relationship between the phase advance and time of the target synchrotron},
+description={Initial phase advance in a linear relationship between the phase advance and time of the target ring},
 sort=symbollambda, type=symbolslist
 }
 
@@ -842,7 +848,7 @@ description={Application Programming Interface},type=abbreslist
 }
 \newglossaryentry{BuTiS}{
 name={BuTiS},
-description={Bunchphase Timing System},type=abbreslist
+description={Bunch Phase Timing System},type=abbreslist
 }
 
 \newglossaryentry{BI}{
@@ -1160,11 +1166,11 @@ description={Rules for the buckets to be filled}, type={termslist}
 }
 \newglossaryentry{glos:cir_ratio}{
 name={circumference ratio},
-description={Ratio of the circumference for synchrotrons of different size}, type={termslist}
+description={Ratio of the circumference for two ring accelerators of different size}, type={termslist}
 }
 \newglossaryentry{glos:rev_ratio}{
 name={revolution frequency ratio},
-description={Ratio of the revolution frequencies for synchrotrons of different size}, type={termslist}
+description={Ratio of the revolution frequencies for two ring accelerators of different size}, type={termslist}
 }
 \newglossaryentry{glos:har_ratio}{
 name={harmonic ratio},
@@ -1176,11 +1182,11 @@ description={Collection of particles captured within one rf bucket}, type={terms
 }
 \newglossaryentry{glos:ext_kick}{
 name={extraction kicker},
-description={Diverts a circulating beam to leave a synchrotron}, type={termslist}
+description={Diverts a circulating beam to leave a ring accelerator}, type={termslist}
 }
 \newglossaryentry{glos:inj_kick}{
 name={injection kicker},
-description={Merges one beam into a circulating beam in a synchrotron }, type={termslist}
+description={Merges one beam into a circulating beam in a ring accelerator}, type={termslist}
 }
 \newglossaryentry{glos:rise_time}{
 name={kicker rise time},
@@ -1253,6 +1259,8 @@ name={phase measurement signal},
 description={Harmonic or subharmonic signal generated by the Group DDS and transmitted to the individual rf station as a reference signal}, type={termslist}
 }
 
+
+
 \newglossaryentry{glos:group_DDS}{
 name={Group DDS},
 description={DDS module that generates an phase measurement signal for a group of cavities}, type={termslist}
@@ -1298,7 +1306,7 @@ description={Time closeness of agreement between the actual start of the synchro
 }
 \newglossaryentry{glos:bucket_label}{
 name={bucket indication signal},
-description={Time indication of a dedicated bucket passing on the virtual rf cavity of the target synchrotron, when it is correct phase aligned with the rf system of the source synchrotron for the bunch-to-bucket injection}, type={termslist}
+description={Time indication of a dedicated bucket passing on the virtual rf cavity of the target ring, when it is correct phase aligned with the rf system of the source ring for the bunch-to-bucket injection}, type={termslist}
 }
 \newglossaryentry{glos:T0_incidents}{
 name={T0 incidents},
@@ -1362,7 +1370,7 @@ description={Frequency of the main harmonic, according to which the beam is bunc
 }
 \newglossaryentry{glos:B2B_t_SCU}{
 name={B2B target SCU},
-description={Collects the predicted phase of the target synchrotron and transfers it to the source synchrotron}, type={termslist}
+description={Collects the predicted phase of the target ring and transfers it to the source ring}, type={termslist}
 }
 \newglossaryentry{glos:machine_cycle}{
 name={machine cycle},
@@ -1370,7 +1378,7 @@ description={One complete operation cycle of a machine, i.e. injection, ramp up,
 }
 \newglossaryentry{glos:batch}{
 name={batch},
-description={A train of bunches circulating along a synchrotron to be transferred to buckets}, type={termslist}% E.g. SIS100 batch: Train of 4 $\cdot$ 2 $U^{28+}$ bunches injected into SIS100 in one SIS18 to SIS100 super cycle. Or train of 4 $\cdot$ 1 $H^{+}$ bunches injected into SIS100 in one SIS18 to SIS100 super cycle}
+description={A train of bunches circulating along a ring to be transferred to buckets}, type={termslist}% E.g. SIS100 batch: Train of 4 $\cdot$ 2 $U^{28+}$ bunches injected into SIS100 in one SIS18 to SIS100 super cycle. Or train of 4 $\cdot$ 1 $H^{+}$ bunches injected into SIS100 in one SIS18 to SIS100 super cycle}
 }
 \newglossaryentry{glos:bunch_gap}{
 name={bunch gap},
@@ -1503,9 +1511,9 @@ in Frankfurt am Main\par}
 \thispagestyle{empty}
 \begin{flushleft}
 	 \vspace* {6cm}
-{ \normalsize vom Fachbereich Physik der Goethe-Universit\"at\\
+{ \normalsize vom Fachbereich Physik der \\
     \vspace{0.5cm}
-	als Dissertation angenommen.}\par
+	Goethe-Universit\"at als Dissertation angenommen.}\par
     \vspace{4cm}
 	
 
@@ -1631,11 +1639,19 @@ I would like to dedicate this dissertation to my dear parents,\\ loving husband 
 %\chapter{Existing transfer system and the transfer system of the FAIR accelerators}
 %\input{chapters/6Existing}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \chapter*{Conclusion and Outlook}
 \markboth{Conclusion and Outlook}{}
 \addcontentsline{toc}{chapter}{Conclusion and Outlook}
+
+%\setcounter{table}{0}
+%\renewcommand{\thetable}{\Roman{table}}
 \input{chapters/7SummaryAusblick}
 \selectlanguage{german}
+
+%\setcounter{table}{0}
+%\renewcommand{\thetable}{\Roman{table}}
+%\renewcaptionname{ngerman}{\listtablename}{Tabellen}
 \chapter*{Zusammenfassung}
 \markboth{Zusammenfassung}{}
 \addcontentsline{toc}{chapter}{Zusammenfassung}
