--- a/reference.bib
+++ b/reference.bib
@@ -707,6 +707,7 @@
 }
 
 @techreport{moller_beam-residual_1999,
+	type = {Technical {Report}},
 	title = {Beam-residual {Gas} {Interactions}},
 	url = {http://www.chem.elte.hu/foundations/altkem/vakuumtechnika/CERN13.pdf},
 	urldate = {2016-11-14},
@@ -777,4 +778,22 @@
 	journal = {FAIR Technical Note},
 	author = {Kaiser, K.},
 	year = {2014}
+}
+
+@inproceedings{spiller_technologies_2016,
+	address = {Busan, Korea},
+	title = {Technologies for {Stabilizing} the {Dynamic} {Vacuum} and {Charge} {Related} {Beam} {Loss} in {Heavy} {Ion} {Synchrotrons}},
+	url = {http://epaper.kek.jp/ipac2016/papers/mopoy055.pdf},
+	urldate = {2017-05-27},
+	booktitle = {Proc. of {IPAC}},
+	publisher = {JACOW, Geneva, Switzerland},
+	author = {Spiller, P. and others},
+	year = {2016},
+	pages = {977--980},
+	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\VPMVXBM7\\Spiller et al. - 2016 - Technologies for Stabilizing the Dynamic Vacuum an.pdf:application/pdf}
+}
+
+@misc{noauthor_cern_nodate,
+	title = {{CERN} accelerator complex},
+	url = {https://home.cern/about/accelerators}
 }
