--- a/reference.bib
+++ b/reference.bib
@@ -759,9 +759,10 @@
 	year = {2011}
 }
 
-@phdthesis{prados_notitle_nodate,
+@phdthesis{prados_rock_nodate,
 	address = {Germany},
 	type = {({Unpublished} doctoral thesis)},
+	title = {Rock {Solid} {WR} {Network} for {GSI}/{FAIR} {Control} {System}},
 	school = {Technical University Darmstadt},
 	author = {Prados, C.}
 }
